<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.app_start.StartPageFragment">

    <Button
        android:id="@+id/filter_button"
        android:layout_width="402dp"
        android:layout_height="61dp"
        android:text="@string/filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/messages_button"
        android:layout_width="102dp"
        android:layout_height="56dp"
        android:text="@string/messages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_button" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/messages_button"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/create_post_start_page"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_button"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="612dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/messages_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_button" />

</androidx.constraintlayout.widget.ConstraintLayout>