<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.post_fragments.PostFragment" >

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/post_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_by"
        app:layout_constraintVertical_bias="0.99"
        tools:src="@tools:sample/backgrounds/scenic[18]" />

    <TextView
        android:id="@+id/post_rubric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/post_rubric"
        app:layout_constraintBottom_toTopOf="@+id/postImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/post_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/post_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toEndOf="@+id/post_rubric"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="84dp"
        android:text="@string/post_distance"
        app:layout_constraintBottom_toTopOf="@+id/post_description"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/post_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/booking_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_distance" />

    <TextView
        android:id="@+id/post_description"
        android:layout_width="384dp"
        android:layout_height="203dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:text="@string/post_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/postReviewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_button"
        app:layout_constraintBottom_toBottomOf="@+id/post_book_button"
        app:layout_constraintEnd_toStartOf="@+id/post_book_button"
        app:layout_constraintStart_toEndOf="@+id/post_distance" />
</androidx.constraintlayout.widget.ConstraintLayout>