<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile_fragments.ProfileFragment" >

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/show_posts"
        app:layout_constraintEnd_toEndOf="@+id/profileUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileUsername"
        app:layout_constraintTop_toBottomOf="@+id/profileUsername" />

    <Button
        android:id="@+id/showReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/show_reviews"
        app:layout_constraintEnd_toEndOf="@+id/showPosts"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="@+id/showPosts"
        app:layout_constraintTop_toBottomOf="@+id/showPosts" />

    <Button
        android:id="@+id/showBookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_bookings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showReviews"
        app:layout_constraintVertical_bias="0.288" />

</androidx.constraintlayout.widget.ConstraintLayout>